NXP-32722: cleanup / format