@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2010-2018 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2010-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,6 @@ package org.nuxeo.ecm.platform.query.nxql;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.GregorianCalendar;
 import java.util.List;
@@ -116,7 +115,7 @@ public class NXQLQueryBuilder {
         queryBuilder.append(getQueryElement(model, whereClause, quickFiltersClause, params));
 
         String sortClause = getSortClause(sortInfos);
-        if (sortClause.length() > 0) {
+        if (!sortClause.isEmpty()) {
             queryBuilder.append(" ");
             queryBuilder.append(sortClause);
         }
@@ -151,7 +150,7 @@ public class NXQLQueryBuilder {
                 }
 
                 predicateString = predicateString.trim();
-                if (!predicateString.equals("")) {
+                if (!predicateString.isEmpty()) {
                     elements.add(predicateString);
                 }
             }
@@ -184,7 +183,7 @@ public class NXQLQueryBuilder {
         while (elements.size() == 1 && clauseValues.startsWith("(") && clauseValues.endsWith(")")) {
             clauseValues = clauseValues.substring(1, clauseValues.length() - 1).trim();
         }
-        if (clauseValues.length() == 0) {
+        if (clauseValues.isEmpty()) {
             return "";
         }
         return " WHERE " + clauseValues;
@@ -222,17 +221,17 @@ public class NXQLQueryBuilder {
                     continue;
                 }
                 key = ":" + key;
-                if (parameter instanceof String[]) {
-                    pattern = replaceStringList(pattern, Arrays.asList((String[]) parameter), quoteParameters, escape, key);
-                } else if (parameter instanceof List) {
-                    pattern = replaceStringList(pattern, (List<?>) parameter, quoteParameters, escape, key);
-                } else if (parameter instanceof Boolean) {
-                    pattern = buildPattern(pattern, key, ((Boolean) parameter) ? "1" : "0");
+                if (parameter instanceof String[] strings) {
+                    pattern = replaceStringList(pattern, List.of(strings), quoteParameters, escape, key);
+                } else if (parameter instanceof List<?> list) {
+                    pattern = replaceStringList(pattern, list, quoteParameters, escape, key);
+                } else if (parameter instanceof Boolean bool) {
+                    pattern = buildPattern(pattern, key, bool ? "1" : "0");
                 } else if (parameter instanceof Number) {
                     pattern = buildPattern(pattern, key, parameter.toString());
                 } else if (parameter instanceof Literal) {
                     if (quoteParameters) {
-                        pattern = buildPattern(pattern, key, "'" + parameter.toString() + "'");
+                        pattern = buildPattern(pattern, key, "'" + parameter + "'");
                     } else {
                         pattern = buildPattern(pattern, key, ((Literal) parameter).asString());
                     }
@@ -255,20 +254,19 @@ public class NXQLQueryBuilder {
             String[] queryStrList = (pattern + ' ').split("\\?");
             queryBuilder = new StringBuilder(queryStrList[0]);
             for (int i = 0; i < params.length; i++) {
-                if (params[i] instanceof String[]) {
-                    appendStringList(queryBuilder, Arrays.asList((String[]) params[i]), quoteParameters, escape);
-                } else if (params[i] instanceof List) {
-                    appendStringList(queryBuilder, (List<?>) params[i], quoteParameters, escape);
-                } else if (params[i] instanceof Boolean) {
-                    boolean b = ((Boolean) params[i]).booleanValue();
-                    queryBuilder.append(b ? 1 : 0);
-                } else if (params[i] instanceof Number) {
-                    queryBuilder.append(params[i]);
-                } else if (params[i] instanceof Literal) {
+                if (params[i] instanceof String[] string) {
+                    appendStringList(queryBuilder, List.of(string), quoteParameters, escape);
+                } else if (params[i] instanceof List<?> list) {
+                    appendStringList(queryBuilder, list, quoteParameters, escape);
+                } else if (params[i] instanceof Boolean bool) {
+                    queryBuilder.append(bool ? 1 : 0);
+                } else if (params[i] instanceof Number number) {
+                    queryBuilder.append(number);
+                } else if (params[i] instanceof Literal literal) {
                     if (quoteParameters) {
-                        queryBuilder.append(params[i].toString());
+                        queryBuilder.append(literal);
                     } else {
-                        queryBuilder.append(((Literal) params[i]).asString());
+                        queryBuilder.append(literal.asString());
                     }
                 } else {
                     if (params[i] == null) {
@@ -311,7 +309,7 @@ public class NXQLQueryBuilder {
             result.add(prepareStringLiteral(param.toString(), quoteParameters, escape));
         }
 
-        return buildPattern(pattern, key, '(' + StringUtils.join(result, ", " + "") + ')');
+        return buildPattern(pattern, key, '(' + StringUtils.join(result, ", ") + ')');
     }
 
     /**
@@ -333,7 +331,8 @@ public class NXQLQueryBuilder {
         }
     }
 
-    public static String getQueryElement(DocumentModel model, PredicateDefinition predicateDescriptor, Escaper escaper) {
+    public static String getQueryElement(DocumentModel model, PredicateDefinition predicateDescriptor,
+            Escaper escaper) {
         String type = predicateDescriptor.getType();
         if (PredicateDefinition.ATOMIC_PREDICATE.equals(type)) {
             return atomicQueryElement(model, predicateDescriptor, escaper);
@@ -354,8 +353,8 @@ public class NXQLQueryBuilder {
             if (fieldDescriptor.getXpath() != null) {
                 throw new NuxeoException(String.format("type of field %s is not string", fieldDescriptor.getXpath()));
             } else {
-                throw new NuxeoException(String.format("type of field %s.%s is not string",
-                        fieldDescriptor.getSchema(), fieldDescriptor.getName()));
+                throw new NuxeoException(String.format("type of field %s.%s is not string", fieldDescriptor.getSchema(),
+                        fieldDescriptor.getName()));
             }
         }
         Object subclauseValue = getRawValue(model, fieldDescriptor);
@@ -394,8 +393,8 @@ public class NXQLQueryBuilder {
                 // value not provided: ignore predicate
                 return "";
             }
-            if (escaper != null && (operator.equals("LIKE") || operator.equals("ILIKE")
-                    || operator.equals("NOT LIKE") || operator.equals("NOT ILIKE"))) {
+            if (escaper != null && (operator.equals("LIKE") || operator.equals("ILIKE") || operator.equals("NOT LIKE")
+                    || operator.equals("NOT ILIKE"))) {
                 value = escaper.escape(value);
             }
             return serializeUnary(parameter, operator, value);
@@ -405,15 +404,7 @@ public class NXQLQueryBuilder {
             String max = getStringValue(model, values[1]);
 
             if (min != null && max != null) {
-                StringBuilder builder = new StringBuilder();
-                builder.append(parameter);
-                builder.append(' ');
-                builder.append(operator);
-                builder.append(' ');
-                builder.append(min);
-                builder.append(" AND ");
-                builder.append(max);
-                return builder.toString();
+                return parameter + ' ' + operator + ' ' + min + " AND " + max;
             } else if (max != null) {
                 return serializeUnary(parameter, "<=", max);
             } else if (min != null) {
@@ -509,7 +500,7 @@ public class NXQLQueryBuilder {
         // add ecm:fulltext. prefix if needed
         if ((operator.equals("FULLTEXT ALL") || operator.equals("FULLTEXT"))
                 && !parameter.startsWith(NXQL.ECM_FULLTEXT)) {
-             ret = NXQL.ECM_FULLTEXT + '.' + parameter;
+            ret = NXQL.ECM_FULLTEXT + '.' + parameter;
         }
         // add the hint
         if (hint != null && !hint.isEmpty()) {
@@ -537,7 +528,7 @@ public class NXQLQueryBuilder {
         // input filtering scheme.
         ConfigurationService cs = Framework.getService(ConfigurationService.class);
         String ignoredChars = cs.getString(IGNORED_CHARS_KEY, DEFAULT_SPECIAL_CHARACTERS_REGEXP);
-        String res = "";
+        StringBuilder res = new StringBuilder();
         value = value.replaceAll("[" + ignoredChars + "]", " ");
         value = value.trim();
         String[] tokens = value.split("[\\s]+");
@@ -545,16 +536,16 @@ public class NXQLQueryBuilder {
             if ("-".equals(token) || "*".equals(token) || "*-".equals(token) || "-*".equals(token)) {
                 continue;
             }
-            if (res.length() > 0) {
-                res += " ";
+            if (!res.isEmpty()) {
+                res.append(" ");
             }
             if (token.startsWith("-") || token.endsWith("*")) {
-                res += token;
+                res.append(token);
             } else {
-                res += token.replace("-", " ").replace("*", " ");
+                res.append(token.replace("-", " ").replace("*", " "));
             }
         }
-        return res.trim();
+        return res.toString().trim();
     }
 
     public static String serializeFullText(String value) {
@@ -563,13 +554,7 @@ public class NXQLQueryBuilder {
     }
 
     protected static String serializeUnary(String parameter, String operator, String rvalue) {
-        StringBuilder builder = new StringBuilder();
-        builder.append(parameter);
-        builder.append(' ');
-        builder.append(operator);
-        builder.append(' ');
-        builder.append(rvalue);
-        return builder.toString();
+        return parameter + ' ' + operator + ' ' + rvalue;
     }
 
     public static String getPlainStringValue(DocumentModel model, PredicateFieldDefinition fieldDescriptor) {
@@ -578,7 +563,7 @@ public class NXQLQueryBuilder {
             return null;
         }
         String value = (String) rawValue;
-        if (value.equals("")) {
+        if (value.isEmpty()) {
             return null;
         }
         return value;
@@ -588,10 +573,10 @@ public class NXQLQueryBuilder {
         Object rawValue = getRawValue(model, fieldDescriptor);
         if (rawValue == null || "".equals(rawValue)) {
             return null;
-        } else if (rawValue instanceof Integer) {
-            return (Integer) rawValue;
-        } else if (rawValue instanceof String) {
-            return Integer.valueOf((String) rawValue);
+        } else if (rawValue instanceof Integer integer) {
+            return integer;
+        } else if (rawValue instanceof String string) {
+            return Integer.valueOf(string);
         } else {
             return Integer.valueOf(rawValue.toString());
         }
@@ -671,19 +656,17 @@ public class NXQLQueryBuilder {
             return null;
         }
         String value;
-        if (rawValue instanceof GregorianCalendar) {
-            GregorianCalendar gc = (GregorianCalendar) rawValue;
+        if (rawValue instanceof GregorianCalendar gc) {
             value = "TIMESTAMP '" + getDateFormat().format(gc.getTime()) + "'";
-        } else if (rawValue instanceof Date) {
-            Date date = (Date) rawValue;
+        } else if (rawValue instanceof Date date) {
             value = "TIMESTAMP '" + getDateFormat().format(date) + "'";
         } else if (rawValue instanceof Integer || rawValue instanceof Long || rawValue instanceof Double) {
             value = rawValue.toString(); // no quotes
-        } else if (rawValue instanceof Boolean) {
-            value = ((Boolean) rawValue).booleanValue() ? "1" : "0";
+        } else if (rawValue instanceof Boolean bool) {
+            value = bool.booleanValue() ? "1" : "0";
         } else {
             value = rawValue.toString().trim();
-            if (value.equals("")) {
+            if (value.isEmpty()) {
                 return null;
             }
             String fieldType = getFieldType(model, fieldDescriptor);
@@ -717,7 +700,7 @@ public class NXQLQueryBuilder {
                     values.add(element.toString());
                 } else {
                     String value = element.toString().trim();
-                    if (!value.equals("")) {
+                    if (!value.isEmpty()) {
                         values.add(NXQL.escapeString(value));
                     }
                 }
